sass/sections/_contacts.scss
.contacts {
    position: relative;
    z-index: 1;
    padding-top: 70px;
    padding-bottom: 90px;
    background: $contacts-bg;
    overflow: hidden;
}

.contacts__header {
    margin-bottom: 60px;
    text-align: center;
}

.contacts__row {
    display: flex;
    justify-content: space-between;
}

.contacts__column:last-child {
    position: relative;
}

.contacts__img {
    z-index: -1;
    position: absolute;
    max-width: 400px;
    top: -61px;
    right: -142px;

    display: flex;
    justify-content: center;
    align-items: center;
}

.contacts__list {
    margin-bottom: 34px;
    line-height: 1.6;

    li+li {
        margin-top: 22px;
    }

    span {
        display: inline-block;
        width: 103px;
        font-size: 22px;
        font-weight: 600;
    }

    a {
        margin-left: 85px;
    }
}

.contacts__text {
    margin-bottom: 32px;
    width: 538px;

    font-size: 18px;
    line-height: 1.6;

    p+p {
        margin-top: 8px;
    }
}

